--- a/client/src/components/Login/Login.module.css
+++ b/client/src/components/Login/Login.module.css
@@ -6,8 +6,12 @@
 }
 
 .loginForm {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   max-width: 300px;
   width: 100%;
+  height: 26rem;
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 8px;
@@ -22,16 +26,24 @@
   z-index: 1;
 }
 
-.loginForm img {
+.logoImg {
+  height: 3rem;
+  margin-left: 1rem;
+  align-self: flex-end;
+  /* vertical-align: bottom; */
+}
+
+/* .loginForm img {
   max-width: 3rem;
   height: auto;
   margin-bottom: 20px;
-}
+} */
 
-h2 {
+.loginHeading {
   font-size: 1.5rem;
   margin-bottom: 20px;
-  color: aliceblue;
+  color: #0056b3;
+  align-self: center;
 }
 
 label {
@@ -40,7 +52,7 @@ label {
   color: aliceblue;
 }
 
-input {
+.inputClass {
   width: 100%;
   padding: 10px;
   margin-bottom: 16px;
@@ -49,7 +61,7 @@ input {
   box-sizing: border-box;
 }
 
-button {
+.btn {
   background-color: #007bff;
   color: #fff;
   padding: 10px;
@@ -58,9 +70,11 @@ button {
   cursor: pointer;
   width: 100%;
   font-size: 1rem;
+  align-self: center;
+  width: 50%;
 }
 
-button:hover {
+.btn:hover {
   background-color: #0056b3;
 }
 
