--- a/client/src/components/Register/Register.module.css
+++ b/client/src/components/Register/Register.module.css
@@ -7,6 +7,9 @@
 }
 
 .registerForm {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   max-width: 300px;
   width: 100%;
   height: 26rem;
@@ -24,14 +27,16 @@
   z-index: 1;
 }
 
-.registerForm img {
+.imgClass {
   width: 3rem;
   height: auto;
+  margin-left: 85%;
 }
 
-h2 {
+.registerHeading {
   font-size: 1.5rem;
   margin-bottom: 20px;
+  align-self: center;
 }
 
 .on-dark {
@@ -43,26 +48,28 @@ label {
   margin-bottom: 8px;
 }
 
-input {
+.inputClass {
   width: 100%;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
+  margin-bottom: 16px;
 }
 
-button {
+.btn {
   background-color: #007bff;
   color: #fff;
   padding: 10px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  width: 100%;
+  width: 50%;
   font-size: 1rem;
+  align-self: center;
 }
 
-button:hover {
+.btn:hover {
   background-color: #0056b3;
 }
 
