--- a/client/src/components/TaskDetails/TaskDetails.module.css
+++ b/client/src/components/TaskDetails/TaskDetails.module.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
   margin-top: 4rem;
-  height: 90vh;
+  height: 70vh;
 }
 .details {
   display: flex;
@@ -11,24 +11,23 @@
   align-items: center;
   justify-content: center;
 
-  border: 1px solid #ccc;
   border-radius: 8px;
   padding: 16px;
   margin: auto;
   width: 50%;
-  max-width: 400px;
+  max-width: 600px;
   background: rgb(252, 252, 252);
   background: linear-gradient(
     180deg,
-    rgba(252, 252, 252, 0.7) 0%,
-    rgba(157, 215, 255, 0.7) 44%,
-    rgba(35, 138, 251, 0.7) 95%
+    rgba(252, 252, 252, 0.8) 0%,
+    rgba(157, 215, 255, 0.8) 44%,
+    rgba(35, 138, 251, 0.8) 95%
   );
   z-index: 2;
   box-shadow: 0 4px 8px rgba(6, 55, 215, 0.1);
 }
 .taskName {
-  color: #003873;
+  color: #040073;
 }
 
 .image {
@@ -40,37 +39,62 @@
   width: 100%;
   display: flex;
   justify-content: space-evenly;
+  margin-top: 2rem;
 }
-button {
-  background-color: #007bff;
+.buttons a {
+  font-size: 1.2rem;
+}
+.buttons button {
+  font-size: 1.2rem;
+}
+a .button {
+  width: 100%;
   color: #fff;
-  padding: 10px;
+  background-color: #0056b3;
+  text-decoration: none;
+  padding: 10px 20px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  /* width: 100%; */
-  font-size: 1rem;
+  transition: all ease-out 0.2s;
 }
 
-button:hover {
+.button {
+  color: #fff;
   background-color: #0056b3;
+  width: 20%;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: all ease-out 0.2s;
+}
+
+.button:hover {
+  background-color: #007bff;
 }
 
 .creationDate {
   font-size: 1.5rem;
-  color: #003873;
+  color: #040073;
 }
 
 .dueDate {
   font-size: 1.5rem;
-  color: #003873;
+  color: #040073;
+
   line-height: 1.5rem;
   margin-bottom: 10px;
 }
 
 .description {
-  overflow-y: scroll;
+  overflow-y: auto;
   font-size: 1.2rem;
+  color: #040073;
   line-height: 1.6;
   height: 30vh;
 }
+
+/* .description p {
+  margin-top: 2rem;
+} */
