--- a/client/src/components/UserProfile/User.module.css
+++ b/client/src/components/UserProfile/User.module.css
@@ -31,10 +31,16 @@
   font-size: 1.5rem;
   margin-bottom: 8px;
 }
+.userImg {
+  width: 40%;
+  height: auto;
+  border-radius: 50%;
+}
 
 .email,
 .role,
 .userId {
   margin-bottom: 8px;
-  color: #555;
+  color: #003873;
+  font-size: 1.5rem;
 }
