--- a/client/src/components/EditTask/EditTask.module.css
+++ b/client/src/components/EditTask/EditTask.module.css
@@ -33,14 +33,7 @@
   gap: 2rem;
   font-family: "Bebas Neue";
 }
-input,
-select,
-textarea {
-  /* outline: 2px solid #0056b3; */
-  box-shadow: 0.3em 0.3em 0.1em rgba(15, 2, 99, 0.3);
-  /* outline: 2px solid transparent; */
-  transition: all ease-in 0.1s;
-}
+
 input:hover,
 select:hover,
 textarea:hover {
@@ -84,13 +77,17 @@ label {
   color: #0056b3;
 }
 
-input,
-textarea {
+.inputStyle {
   width: 100%;
   padding: 15px;
   border: 1px solid #ccc;
   border-radius: 4px;
+  margin-bottom: 10px;
   box-sizing: border-box;
+  /* outline: 2px solid #0056b3; */
+  box-shadow: 0.3em 0.3em 0.1em rgba(15, 2, 99, 0.3);
+  /* outline: 2px solid transparent; */
+  transition: all ease-in 0.1s;
 }
 
 .btn {
@@ -142,4 +139,16 @@ textarea {
 .link img {
   max-width: 3rem;
   height: auto;
+}
+.error {
+  color: rgb(245, 0, 0);
+  font-weight: lighter;
+  background-color: rgba(240, 248, 255, 0.5);
+  font-weight: 600;
+  letter-spacing: 2px;
+  font-size: 12px;
+  margin-top: 5px;
+  padding: 5px;
+  border-radius: 4px;
+  font-family: "Montserrat";
 }
