--- a/client/src/components/CreateTask/CreateTask.module.css
+++ b/client/src/components/CreateTask/CreateTask.module.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 90vh;
+  height: 85vh;
 }
 
 .createTaskForm {
@@ -84,10 +84,10 @@ label {
   color: #0056b3;
 }
 
-input,
-textarea {
+.inputStyle {
   width: 100%;
   padding: 10px;
+  margin-bottom: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
@@ -143,3 +143,22 @@ textarea {
   max-width: 3rem;
   height: auto;
 }
+.error {
+  color: rgb(245, 0, 0);
+  font-weight: lighter;
+  background-color: rgba(240, 248, 255, 0.5);
+  font-weight: 600;
+  letter-spacing: 2px;
+  font-size: 10px;
+  margin-top: 5px;
+  padding: 5px;
+  border-radius: 4px;
+  font-family: "Montserrat";
+}
+/* .error {
+  color: rgb(254, 0, 0);
+  font-size: 14px;
+  margin-top: 5px;
+
+  letter-spacing: 2px;
+} */
