--- a/client/src/components/Login/Login.module.css
+++ b/client/src/components/Login/Login.module.css
@@ -98,3 +98,15 @@ label {
 .field a:hover {
   text-decoration: underline;
 }
+.error {
+  color: rgb(245, 0, 0);
+  font-weight: lighter;
+  background-color: rgba(240, 248, 255, 0.5);
+  font-weight: 600;
+  letter-spacing: 2px;
+  font-size: 12px;
+  margin-top: 5px;
+  padding: 5px;
+  border-radius: 4px;
+  font-family: "Montserrat";
+}
